<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView

        android:id="@+id/Background"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_color="#FFff"
        app:civ_border_width="4dp"
        android:src="@drawable/brihan_bocanegra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">


    </de.hdodenhof.circleimageview.CircleImageView>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/brihan"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        android:text="@string/especialidad"
        android:textAlignment="center"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />


    <TextView
        android:id="@+id/fecha"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:drawableStart="@drawable/ic_calendar"
        android:gravity="center|left"
        android:hint="@string/dia"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Background"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/celu"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_local"
        android:gravity="center|left"
        android:hint="@string/teléfono"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_home"
        android:gravity="center|left"
        android:hint="@string/ciudad"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="190dp"
        android:layout_height="50dp"

        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_email"
        android:gravity="center|left"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="399dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Background" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="438dp"
        android:layout_height="129dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        app:srcCompat="@drawable/experiencia" />

    <GridLayout
        android:layout_width="317dp"
        android:layout_height="301dp"
        android:layout_margin="4dp"
        android:background="@drawable/bordercirculo"
        android:columnCount="2"
        android:elevation="6dp"
        android:rowCount="2"

        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="78dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="18dp"
                app:srcCompat="@drawable/ic_person"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|fill_horizontal"
                android:layout_marginStart="22dp"
                android:layout_marginBottom="12dp"
                android:text="Experiencie"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/paginaDos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="60dp"
                android:layout_height="54dp"
                android:layout_row="0"

                android:layout_column="3"
                android:layout_gravity="center|clip_vertical|fill_vertical"
                android:layout_margin="24dp"
                app:srcCompat="@drawable/ic_image"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left|center_vertical"
                android:layout_marginStart="21dp"
                android:layout_marginBottom="12dp"
                android:text="Background"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="center_horizontal"
                android:layout_margin="22dp"
                app:srcCompat="@drawable/ic_favorite"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="10dp"
                android:text="Interest"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="26dp"
            android:backgroundTint="@color/cyan_700"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="34dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="center_horizontal"
                android:layout_margin="22dp"
                app:srcCompat="@drawable/portafolio"
                tools:layout_editor_absoluteX="102dp"
                tools:layout_editor_absoluteY="591dp" />

            <TextView
                android:layout_width="104dp"
                android:layout_height="22dp"
                android:layout_gravity="bottom|clip_horizontal|center_horizontal|fill_horizontal"
                android:layout_marginStart="27dp"
                android:layout_marginBottom="10dp"
                android:text="Portafolio"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




